[package]
name = "ch10_client"
version = "0.1.0"
authors = ["Ric Messier <kilroy@washere.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"hyper" = "*"
tokio = { version = "*", features = ["macros", "tcp", "fs"] }
"hyper-tls" = "*"
"voca_rs" =  "*"