[package]
name = "ch3_dvdlib_b"
version = "0.1.0"
authors = ["Ric Messier <kilroy@washere.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
